[macOS] High contrast theme overrides user-set text and link color preferences
Categories
(Core :: Layout, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox-esr91 | --- | wontfix |
firefox90 | --- | wontfix |
firefox91 | --- | wontfix |
firefox92 | --- | fixed |
People
(Reporter: erwinm, Assigned: morgan)
References
(Blocks 1 open bug, Regressed 1 open bug, Regression)
Details
(Keywords: access, regression, Whiteboard: [hcm-2021-h2])
Attachments
(2 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.14; rv:88.0) Gecko/20100101 Firefox/88.0
Steps to reproduce:
Set Firefox to use different link colors, e.g. orange for unvisited links and red for visited ones.
Open any web page.
Actual results:
Blue for unvisited links.
I have trouble reading blue and distinguishing it from black or green.
Expected results:
Orange for unvisited links, red for visited ones.
This can be a disability access issue for color-blind users.
Comment 3•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Firefox::Preferences' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Comment 4•4 years ago
|
||
Set Firefox to use different link colors, e.g. orange for unvisited links and red for visited ones.
Please provide a full list of clear steps to reproduce which leave no room for interpretation where exactly to do what exactly.
Open about:preferences
Search for color
Open colors
Fight the damned interface until it accepts orange for unvisited links and red for visited ones. This may take several tries. Set override to Always. Click OK (sic).
Visit any page.
Look at the links.
I can't specify the platform above, and have a sudden severe migraine, due to bug 1694064.
Updated•4 years ago
|
Reporter | ||
Comment 10•4 years ago
|
||
I use "Increase Contrast" in MacOS. I had tried turning off "Increase Contrast" and reloading pages, so I thought I'd ruled out any effect, but I hadn't tried turning it off and restarting Firefox that way.
Updated instructions:
-
Open Mac System Preferences > Accessibility > Display.
-
Turn on "Increase Contrast."
-
Start or restart Firefox.
-
Open about:preferences.
-
Search for color.
-
Open colors.
-
Fight the damned interface until it accepts orange for unvisited links and red for visited ones. This may take several tries. Set override to Always. Click OK (sic).
-
Visit any page.
-
Look at the links.
It appears that bug 1691793 causes Firefox to load with a "high contrast theme" enabled, and that theme overrides color selections from about:preferences.
Reporter | ||
Comment 11•4 years ago
|
||
Related: bug 1593273.
Updated•4 years ago
|
Comment 12•4 years ago
|
||
Hey Morgan, as Yura isn't around anymore, could you please take a look? Thanks.
Updated•4 years ago
|
Comment 13•4 years ago
|
||
Setting the "access" keyword and the corresponding whiteboard so that our development/UX team can take a look.
Assignee | ||
Comment 15•4 years ago
|
||
Previously, we only respected the user's system colors preference in the case that a user (a) was not using a high contrast theme or (b) was using the high contrast theme supplied by firefox (FF-HCM).
Any OS-level HCM forced system colors and rendered the checkbox non-functional. We also previously computed visited link color via foreground/background composition, but this is only necessary on Windows HCM where the theme fails to specify a visited link color.
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Comment 16•4 years ago
|
||
Comment 17•4 years ago
|
||
bugherder |
Updated•4 years ago
|
Comment 18•4 years ago
|
||
We may want to circle back to this bug for possible ESR91 uplift next cycle, but it probably isn't urgent enough for a last-second uplift to Fx91 this cycle.
Assignee | ||
Comment 19•4 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #18)
We may want to circle back to this bug for possible ESR91 uplift next cycle, but it probably isn't urgent enough for a last-second uplift to Fx91 this cycle.
yeah I think that's fair, if we can uplift to ESR let's do that, though.
Reporter | ||
Comment 20•4 years ago
|
||
Related: bug 1713015 which is also resolved fixed and had high-contrast mode override user choices.
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Updated•2 years ago
|
Description
•